[package]
name = "ned-wallet-vaults"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ned_wallet_vaults"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = "0.28.0"
bytemuck = { version = "1.13.1", features = ["derive", "min_const_generics"]}
mercurial-vault = { git = "https://github.com/mercurial-finance/vault-sdk", rev="b8c4e9f2b6ef28550a2145e11dc68a7cdf953c0d", features = ["cpi"] }
affiliate = { git = "https://github.com/MeteoraAg/vault-periphery", branch="pump_version", features = ["cpi", "no-entrypoint"] }